refactor: Repository 구조 변경 및 DTO 구조 변경